src/test/deca/syntax/valid/created/include_suite.deca
#include "include_suite1.deca"

{
}
