src/test/deca/syntax/invalid/created/include_circulaire_2.deca
#include "include_circulaire_1.deca"

class P{
}